emulator media, loc request message
add support for media messages to emulator
support location request messages

--- a/builder/index.html
+++ b/builder/index.html
@@ -3,18 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WhatsApp Chatbot Flow Builder</title>
+    <title>WhatsApp Chatbot Builder</title>
     <meta name="description" content="Visual flow builder for creating WhatsApp chatbot conversation flows with template-driven architecture" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="bdd7513a-39dc-4870-8338-4b49c28af741" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="author" content="DonnC" />
   </head>
 
   <body>
