--- a/emulator/index.html
+++ b/emulator/index.html
@@ -1,15 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pywce WhatsApp Emulator</title>
+    <title>WhatsApp Emulator</title>
     <meta name="description" content="A local whatsapp emulator" />
     <meta name="author" content="DonnC" />
-</head>
+  </head>
 
-<body>
-<div id="root"></div>
-<script type="module" src="/src/main.tsx"></script>
-</body>
+  <body>
+    <div id="root"></div>
+
+
+     <!-- <script>
+      window.csrf_token = "{{ frappe.session.csrf_token }}";
+    </script> -->
+
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
