--- a/studio/public/index.html
+++ b/studio/public/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="A local whatsapp emulator" />
+    <meta name="description" content="Visual flow builder for creating WhatsApp chatbot conversation flows with template-driven architecture" />
     <meta name="author" content="DonnC" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Pywce Emulator</title>
+     <title>WhatsApp Chatbot Builder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
