--- a/studio/index.html
+++ b/studio/index.html
@@ -10,6 +10,12 @@
 
   <body>
     <div id="root"></div>
+
+
+      <!-- <script>
+      window.csrf_token = "{{ frappe.session.csrf_token }}";
+    </script> -->
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
